--- a/45-streaming-telemetry/configs/grafana/dashboards.yml
+++ b/45-streaming-telemetry/configs/grafana/dashboards.yml
@@ -4,7 +4,8 @@ providers:
   - name: telemetry
     type: file
     updateIntervalSeconds: 10
-    allowUiUpdates: false
+    allowUiUpdates: true
+    editable: true
     options:
       # <string, required> path to dashboard files on disk. Required when using the 'file' type
       path: /var/lib/grafana/dashboards
