--- a/15-startup/srl.cfg
+++ b/15-startup/srl.cfg
@@ -1,63 +1,14 @@
-interface ethernet-1/1 {
-    subinterface 0 {
-        admin-state enable
-        ipv4 {
-            admin-state enable
-            address 192.168.1.1/24 {
-            }
-        }
-    }
-}
-interface lo0 {
-    subinterface 0 {
-        admin-state enable
-        ipv4 {
-            admin-state enable
-            address 10.10.10.1/32 {
-            }
-        }
-    }
-}
-network-instance default {
-    interface ethernet-1/1.0 {
-    }
-    interface lo0.0 {
-    }
-    protocols {
-        bgp {
-            admin-state enable
-            autonomous-system 65001
-            router-id 10.10.10.1
-            afi-safi ipv4-unicast {
-                admin-state enable
-            }
-            group ibgp {
-                export-policy [ export-lo ]
-                afi-safi ipv4-unicast {
-                    admin-state enable
-                }
-            }
-            neighbor 192.168.1.2 {
-                admin-state enable
-                peer-as 65001
-                peer-group ibgp
-            }
-        }
-    }
-}
-routing-policy {
-    prefix-set loopback {
-        prefix 10.10.10.1/32 mask-length-range exact {
-        }
-    }
-    policy export-lo {
-        statement 10 {
-            match {
-                prefix-set loopback
-            }
-            action {
-                policy-result accept
-            }
-        }
-    }
-}
+set / interface ethernet-1/1 admin-state enable
+set / interface ethernet-1/1 subinterface 0 ipv4 admin-state enable
+set / interface ethernet-1/1 subinterface 0 ipv4 address 192.168.1.0/31
+set / interface system0 admin-state enable
+set / interface system0 subinterface 0 ipv4 admin-state enable
+set / interface system0 subinterface 0 ipv4 address 1.1.1.1/32
+set / network-instance default type default
+set / network-instance default admin-state enable
+set / network-instance default interface ethernet-1/1.0
+set / network-instance default interface system0.0
+set / network-instance default protocols isis instance 1 admin-state enable
+set / network-instance default protocols isis instance 1 net [ 49.0000.0010.0100.1001.00 ]
+set / network-instance default protocols isis instance 1 interface ethernet-1/1.0 circuit-type point-to-point
+set / network-instance default protocols isis instance 1 interface system0.0 circuit-type point-to-point
