--- a/15-startup/startup.clab.yml
+++ b/15-startup/startup.clab.yml
@@ -5,10 +5,10 @@ topology:
       kind: nokia_srlinux
       image: ghcr.io/nokia/srlinux
       startup-config: srl.cfg
-    ceos:
-      kind: arista_ceos
-      image: ceos:4.33.0F
-      startup-config: ceos.cfg
+    xrd:
+      kind: cisco_xrd
+      image: xrd:7.8.1
+      startup-config: xrd.cfg
 
   links:
-    - endpoints: [srl:e1-1, ceos:eth1]
+    - endpoints: [srl:e1-1, xrd:Gi0-0-0-0]
